<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtTitle"
            android:hint="@string/hnt_title" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtFirstName" android:layout_marginTop="105dp"
            app:layout_constraintEnd_toEndOf="@+id/txtFirstName" android:autofillHints=""/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtLastName"
            android:hint="@string/hnt_last_name" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="45dp" android:layout_marginEnd="45dp" android:autofillHints=""/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtFirstName"
            android:hint="@string/hnt_first_name" android:layout_marginTop="89dp" android:layout_marginBottom="82dp"
            app:layout_constraintEnd_toEndOf="@+id/txtLastName" app:layout_constraintTop_toTopOf="@+id/txtTitle"
            app:layout_constraintStart_toStartOf="@+id/txtLastName"
            app:layout_constraintBottom_toBottomOf="@+id/txtLastName" android:autofillHints=""/>
    <Button
            android:text="@string/btn_discard_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel" android:background="#F9F9F9"
            android:layout_marginTop="35dp" app:layout_constraintTop_toBottomOf="@+id/txtLastName"
            app:layout_constraintEnd_toStartOf="@+id/btnSaveBook" android:layout_marginEnd="22dp"
    />
    <Button
            android:text="@string/btn_save_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveBook" android:background="#F9F9F9"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnCancel" android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="@+id/txtLastName"/>
</android.support.constraint.ConstraintLayout>